tests/parser/tests/cases/should_fail/issue_223/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:36
1 |   wrap := (res: Result<T, (int, str)>): Result<T, IoError> => match res {
  |                                      ^ here
2 |   };
  = note: Expected value assignment after type annotation within named tuple. Consider adding a `=`
